# niri-helpers

./: .gitignore  Dockerfile  README.md  build.sh  make.sh  mkniri.sh  niriu.sh  niriush.bats  niriush.md  test_niriu.sh
docs/: ned.md  niriush.md
event_dispatcher/: Cargo.toml
event_dispatcher/src/: main.rs
ned/: Cargo.toml  README.md
ned/examples/: float_magnet.sh  magnet.sh  noempty.sh  showlayout.sh
ned/src/: main.rs
