[package]
name = "ned"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
niri-ipc = { git = "https://github.com/niri-wm/niri.git", branch = "main" }
regex = "1.12.3"
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["io-util", "macros", "process", "sync", "rt-multi-thread", "time"] }
